testsuite/tests/typing-layouts-products/parsing_unary_type.compilers.reference
File "parsing_unary_type.ml", line 10, characters 14-15:
10 | type t = #(int)
                   ^
Error: Syntax error
